# snax

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
snax/: __init__.py  attention.py  base.py  checkpoint.py  checkpoint_test.py  conditional.py  dataset.py  made.py  nn.py  recurrent.py  recurrent_test.py  snax.py  test_attention.py  test_checkpoint.py  test_dataset.py  test_made.py  test_recurrent.py  test_train_lib.py  test_utils.py  test_vmapped.py  train_lib.py  utils.py  utils_test.py
snax/old/: base.py
